--- a/Projects/my times project/resources/css/style.css
+++ b/Projects/my times project/resources/css/style.css
@@ -5,76 +5,129 @@
 .logo{
   display: flex;
   padding-left: 30px;
-  flex-grow: 1;
   align-items: center;
 }
 .header{
-  width 100%;
-  border: 1px solid black;
+    background-color: white;
+    position: fixed;
+    border: 0px;
+    border-bottom: 1px black solid;
+    display: flex;
+    width: 100%;
+  }
+.footer{
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: verdana;
+  font-size: 12px;
+}
 
+h2{
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: georgia;
+  font-size: 30px;
+  font-weight: bold;
+  font-style: normal;
+}
+h3{
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 41px;
+  text-align: center;
 }
 
 #title{
-  margin-right: 700px;
   margin-left: 10px;
   font-family: Verdana;
   color: MediumAquamarine;
   font-size: 14px;
   font-weight: 700;
 }
-.navigation{
-  display:flex;
-  justify-content: space-around;
-  margin-left: auto auto auto 100px;
-  padding: 0px 20px;
-}
-.navigation .nav{
+.footer .title{
   display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
+  font-family: georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+.navigation .nav{
   font-family: Verdana;
   font-size: 14px;
   font-weight: 700;
-  height: auto;
   padding: 10px 20px;
+  display: inline-flex;
+  justify-content: flex-end;
 }
+.nav-control{
+
+}
+
 .main-container{
   display:flex;
   flex-direction: column;
   justify-content: flex-end;
-
 }
-.column.large{
+
+
+.column{
   display: flex;
   flex-direction: column;
+  margin-right: 32px;
+}
+.column-control{
+    margin-top: 80px;
+    display: inline-flex;
+}
+.column.large{
   font-family: Georgia;
   font-size: 17px;
   height: 1115px;
-  margin-right: 32px;
   width: 630px;
   margin-top: 10px;
 }
-.image-content{
-  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
-  display:flex;
-  flex-direction: column;
-  font-size: 40px;
-  color: white;
-  font-weight: 700;
-  height: 300px;
-  justify-content: center;
-  margin-top: 0px
-  text-align: left;
-  width: 630px;
+.column.medium{
+  margin-top: 10px;
+  width: 300px;
 }
+.column.small span{
+  display: flex;
+  padding: 11px 20px;
+  border-bottom: 1px solid black;
+  background-color: whitesmoke;
+}
+
 .narrative{
   color: black;
   display: block;
   font-family: georgia;
   font-size: 17px;
-  height: 200px;
+  <!--height: 200px;-->
   margin-top: 16px;
-  width: 630px;
+  <!--width: 630px;-->
+}
+.lead-story .image-content{
+    background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
+    display:flex;
+    flex-direction: column;
+    font-size: 40px;
+    color: white;
+    font-weight: 700;
+    height: 300px;
+    justify-content: center;
+    margin-top: 0px;
+    text-align: left;
+    width: 630px;
+}
 
 }
 .lead-story{
@@ -82,7 +135,6 @@
   font-family: georgia;
   font-size: 40px;
   font-weight: 700;
-  height: 138px;
   margin-left: 20px;
   text-align: left;
   width: 610px;
@@ -105,7 +157,7 @@
   flex-direction: column;
   font-family: georgia;
   font-size; 17px;
-  height: 565px;
+  height: auto;
   width: 300px;
 }
 
@@ -116,4 +168,36 @@
   font-size: 17px;
   height: 250px;
   width: 300px;
+}
+
+.fall-cancelled.image-content {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
+}
+.pop-culture.image-content {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
+}
+.white-cat.image-content {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
+}
+
+.image-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 300px;
+  margin-top: 15px;
+  font-family: georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+}
+.info{
+  display: flex;
+}
+.info nav{
+  padding-left: 25px;
+}
+nav span{
+  padding: 20px 10px;
 }
